# undelphi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SAMPLES.md
examples/: dump.rs
src/: blobs.rs  classes.rs  detection.rs  dfm.rs  dvclal.rs  entrypoints.rs  extrtti.rs  fields.rs  formats.rs  fpcresources.rs  initfini.rs  interfaces.rs  layout.rs  lib.rs  limits.rs  methods.rs  packageinfo.rs  properties.rs  render.rs  resources.rs  rtti.rs  signatures.rs  util.rs  vmt.rs  vmttables.rs  vtable.rs  xref.rs
tests/: integration.rs  known_rtti.rs  malformed.rs
