[package]
name = "undelphi"
version = "0.3.0"
edition = "2024"
authors = ["Johann Kempter <admin@binflip.rs>"]
rust-version = "1.88"
description = "Static analysis library for Delphi / C++Builder / Free Pascal compiled binaries — identification and metadata extraction (RTTI, VMTs, DFM forms, packages)"
license = "Apache-2.0"
repository = "https://github.com/BinFlip/delphi"
readme = "README.md"
keywords = ["delphi", "pascal", "parser", "reverse-engineering", "binary-analysis"]
categories = ["parser-implementations"]
exclude = ["tests/samples/", "reference/", "research/"]

# undelphi is used in malware-analysis pipelines where every
# input byte is adversarial. These lints prevent the parser from panicking
# on malformed input. The `cfg_attr(test, allow(...))` escape hatch in
# `src/lib.rs` lets tests still use `unwrap`/`expect`/`panic` for terseness.
[lints.rust]
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
arithmetic_side_effects = "deny"
indexing_slicing = "deny"

[features]
default = []
# Emit `tracing` events from sub-parsers when they bail out on truncated /
# corrupt input. Off by default — drops a `tracing` dep into your build.
tracing = ["dep:tracing"]

[dependencies]
goblin = "0.10.7"
scroll = "0.13.0"
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
